# LineageEvo

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: default.toml
docs/: ARCHITECTURE.md
lineage_evo/: __init__.py  cli.py  config.py  env.py  finalize.py  prompts.py  qlib_warnings.py  seed.py
lineage_evo/ablation/: __init__.py  policy.py
lineage_evo/candidate/: __init__.py  generator.py
lineage_evo/evaluation/: __init__.py  evaluator.py  qlib_evaluator.py
lineage_evo/experiments/: __init__.py  defaults.py  runner.py
lineage_evo/factor/: __init__.py  dsl.py  expression.py  qlib_expression.py
lineage_evo/lineage/: __init__.py  dag.py
lineage_evo/llm/: __init__.py  client.py  openai_compatible.py
lineage_evo/operators/: __init__.py  selection.py
lineage_evo/prior_fusion/: __init__.py  policy.py
lineage_evo/prior_rewrite/: __init__.py  manager.py  mock.py  rewriter.py  trigger.py  types.py
lineage_evo/priors/: __init__.py  renderer.py  schemas.py
lineage_evo/recording/: __init__.py  console.py  lineage_forest.py  (+2 more)
tests/: test_ablation.py  test_candidate_generation.py  test_cli.py  test_console_reporter.py  test_env_config.py  test_finalizer.py  test_lineage_state.py  test_openai_compatible_client.py  test_operators.py  test_prior_fusion.py  test_prior_manager.py  test_prior_renderer.py  test_prior_rewriter.py  test_prior_schemas.py  test_prior_update_trigger.py  test_prompts.py  test_qlib_evaluator.py  test_qlib_expression.py  test_qlib_warnings.py  test_run_dir.py  test_search_integration.py  test_search_loop.py  test_smoke_run.py
(+4 files in other folders)
